# funding-arb

./: Dockerfile  main.py  pyproject.toml  python-dev.code-workspace
src/: db_setup.py  db_utils.py  models.py  position_management.py  simple_arb.py
src/advanced_strategy/: arbitrage_manager.py  init_db.py  position_management.py
src/database/: config.py  models.py  repository.py  session.py
src/dex_adapters/: __init__.py  base.py  config.py  extended_adapter.py  hyperliquid.py  lighter_adapter.py  mock_adapter.py  utils.py
src/examples/: api_lighter.py  database_test.py  extended.py  lighter_setup.py
src/fundings/: Dockerfile  base.py  celery_app.py  config.py  db.py  requirements.txt  tasks.py
src/fundings/crawlers/: hyperliquid_crawler.py  lighter_crawler.py
