[project]
name = "funding-arb"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Luca B. Knaack" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "httpx>=0.28.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "redis>=6.4.0",
    "rich>=14.2.0",
    "sqlalchemy>=2.0.44",
    "web3>=7.14.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
