[project]
name = "funding-arb"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Luca B. Knaack" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "hyperliquid-python-sdk>=0.20.0",
    "lighter-sdk",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "redis>=6.4.0",
    "rich>=14.2.0",
    "sqlalchemy>=2.0.44",
    "web3>=7.14.0",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[dependency-groups]
dev = [
    "pyrefly>=0.42.3",
    "pyright>=1.1.407",
    "pytest>=8.4.2",
    "ruff>=0.14.3",
]

[tool.uv.sources]
lighter-sdk = { git = "https://github.com/elliottech/lighter-python.git" }
